--- a/src/components/ClickCounter/index.css
+++ b/src/components/ClickCounter/index.css
@@ -1,8 +1,11 @@
 /* Write your CSS here */
-.bg {
+.bg-container {
   background-color: #ffffff;
   height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .heading {
   font-family: 'Roboto';
@@ -11,7 +14,7 @@
   text-align: center;
   font-weight: bold;
 }
-.sub {
+.paragraph {
   font-family: 'Roboto';
   font-size: 25px;
   color: #c20a72;
@@ -23,4 +26,10 @@
   font-size: 15px;
   font-family: 'Roboto';
   border-width: 0px;
+}
+.sub {
+  font-family: 'Roboto';
+  font-size: 20px;
+  color: #2d3a35;
+  text-align: center;
 }
